package com.verygana2.models.userDetails;

import java.time.ZonedDateTime;
import java.util.ArrayList;
import java.util.List;

import com.verygana2.models.Municipality;
import com.verygana2.models.Avatar;
import com.verygana2.models.Category;
import com.verygana2.models.finance.KeyWallet;
import com.verygana2.models.enums.DocumentType;
import com.verygana2.models.enums.Gender;
import com.verygana2.models.enums.IncomeRange;
import com.verygana2.models.marketplace.FavoriteProduct;
import com.verygana2.models.raffles.RaffleTicket;
import jakarta.persistence.*;
import jakarta.validation.constraints.Max;
import jakarta.validation.constraints.Min;
import jakarta.validation.constraints.NotBlank;
import jakarta.validation.constraints.NotNull;
import jakarta.validation.constraints.Size;
import lombok.Data;
import lombok.EqualsAndHashCode;

@Entity
@Data
@EqualsAndHashCode(callSuper = false)
public class ConsumerDetails extends UserDetails {

    @Column(nullable = false, unique = true, length = 64)
    private String userHash;

    @NotBlank(message = "Username is required")
    @Size(min = 3, max = 20, message = "Username must be between 3 and 20 characters")
    @Column(nullable = false, length = 20)
    private String userName;

    @NotNull(message = "Avatar is required")
    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "avatar_id")
    @lombok.ToString.Exclude
    private Avatar avatar;

    // Excluida del toString: KeyWallet.consumer apunta de vuelta aquí
    // y el toString de Lombok entraría en recursión infinita (StackOverflow)
    @OneToOne(mappedBy = "consumer", fetch = FetchType.LAZY)
    @lombok.ToString.Exclude
    private KeyWallet keyWallet;

    @NotBlank(message = "the name cannot be empty")
    @Size(max = 50)
    private String name;
    @NotBlank(message = "the name cannot be empty")
    @Size(max = 50)
    private String lastName;
    @Min(value = 0, message = "adsWatched must be zero or positive")
    private Integer adsWatched;

    @Min(value = 0, message = "dailyAdCount must be zero or positive")
    @Max(value = 100, message = "dailyAdCount cannot exceed 100")
    private Integer dailyAdCount;

    @NotBlank(message = "Department is required")
    @Size(max = 50)
    private String departmentName;

    @NotBlank(message = "Municipality is required")
    @Size(max = 50)
    private String municipalityName;


    @ManyToOne(optional = false)
    @JoinColumn(name = "municipality_code", nullable = false)
    @lombok.ToString.Exclude
    private Municipality municipality;

    private Integer age;

    @Enumerated(EnumType.STRING)
    private Gender gender;

    private boolean hasPet = false;

    @ManyToMany
    @JoinTable(name = "consumer_preferences", joinColumns = @JoinColumn(name = "user_id"), inverseJoinColumns = @JoinColumn(name = "category_id"))
    @NotNull(message = "Preferences are required")
    @Size(min = 1, message = "At least one category must be selected")
    @lombok.ToString.Exclude
    private List<Category> categories = new ArrayList<>();

    @OneToMany(mappedBy = "consumer", cascade = CascadeType.ALL, orphanRemoval = true)
    @lombok.ToString.Exclude
    private List<FavoriteProduct> favoriteProducts = new ArrayList<>();

    @OneToMany(mappedBy = "ticketOwner", cascade = CascadeType.ALL, orphanRemoval = true)
    @lombok.ToString.Exclude
    private List<RaffleTicket> raffleTickets = new ArrayList<>();

    @Column(name = "referral_code", nullable = false, length = 16, updatable = false)
    private String referralCode;

    @Column(name = "last_daily_login_date")
    private ZonedDateTime lastDailyLoginDate;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "referred_by_consumer_id")
    @lombok.ToString.Exclude
    private ConsumerDetails referredBy;

    @OneToMany(mappedBy = "referredBy")
    @lombok.ToString.Exclude
    private List<ConsumerDetails> referrals = new ArrayList<>();

    // ==================== KYC / SAGRILAFT ====================

    @Enumerated(EnumType.STRING)
    @Column(name = "document_type", nullable = false, length = 5)
    private DocumentType documentType;

    @Column(name = "document_number", nullable = false, length = 20)
    private String documentNumber;

    @Column(name = "occupation", length = 100)
    private String occupation;

    @Enumerated(EnumType.STRING)
    @Column(name = "monthly_income_range", length = 30)
    private IncomeRange monthlyIncomeRange;

    @Column(name = "is_pep", nullable = false)
    private boolean pep = false;

}